Revision history for BSON

{{$NEXT}}

    [Testing]

    - Replace double test cases for better portability.

    - Skip threads tests before 5.8.5 because of problems with
      weak references during global destruction.

v0.999.1  2016-06-08 16:03:23-04:00 America/New_York (TRIAL RELEASE)

    [Testing]

    - Checks for JSON serialization of doubles with no fractional part with
      a regular expression to account for the way that different JSON
      backends will handle it.

    - Skip testing TO_JSON under JSON::PP if the value to be converted
      is false. See https://github.com/makamaka/JSON-PP/pull/23 for why.

    - Skip some BSON double tests on 32-bit perls with JSON::PP to work
      around a JSON::PP bug.

    [~Internal Changes~]

    - Disambiguates calls to 'ref' in BSON::DBRef to avoid warnings.

v0.999.0  2016-06-01 18:27:43-04:00 America/New_York (TRIAL RELEASE)

    [!!! Incompatible Changes !!!]

    - Internal representation of BSON::Bool changed to make it a subclass
      of boolean.pm for conistency with other "boolean" type classes on
      CPAN.

    - All BSON type wrapper classes are now immutable; accessors have
      been changed to read-only.

    [*** Deprecations ***]

    - BSON::Binary deprecated in favor of the new BSON::Bytes module.

    - BSON::Bool deprecated in favor of direct use of boolean.pm.

    - BSON::ObjectID deprecated in favor of the new BSON::OID module.

    - The 'ixhash' option is deprecated in favor of 'ordered' and the
      resulting tied object is no longer guaranteed to be Tie::IxHash.
      This will allow future optimization, as Tie::IxHash is extremely
      slow.

    [API]

    - BSON module is now object-oriented, with an API and options directly
      compatible with the MongoDB driver.  Options set as constructor
      attributes apply to all encoding/decoding, unless options given to methods
      override them.

    - Added a method for inflation of MongoDB's extended JSON format to