@@ -92,8 +92,9 @@ If the value won't fit in a 32-bit integer, an error will be thrown.
 
 =head1 OVERLOADING
 
-The numification operator (C<0+>) is overloaded to return the C<value>
-and fallback overloading is enabled.
+The numification operator, C<0+> is overloaded to return the C<value>,
+the full "minimal set" of overloaded operations is provided (per L<overload>
+documentation) and fallback overloading is enabled.
 
 =cut
 
