@@ -143,8 +143,9 @@ L<Math::BigInt> object.
 
 =head1 OVERLOADING
 
-The numification operator (C<0+>) is overloaded to return the C<value>
-and fallback overloading is enabled.
+The numification operator, C<0+> is overloaded to return the C<value>,
+the full "minimal set" of overloaded operations is provided (per L<overload>
+documentation) and fallback overloading is enabled.
 
 =cut
 
