@@ -2,6 +2,11 @@ Revision history for BSON
 
 {{$NEXT}}
 
+    [Added]
+
+    - Added full "minimum set" of overloaded operations to numeric and
+      string type wrappers.
+
     [Testing]
 
     - Replace double test cases for better portability.
